# BananaBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: config.py
utils/: banana.py  starter.py
utils/core/: __init__.py  file_manager.py  schemas.py  telegram.py
